bluegreen-old.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bluegreen-old
spec:
  replicas: 3
  selector:
    matchLabels:
      app: bluegreen-demo
      version: blue
  template:
    metadata:
      labels:
        app: bluegreen-demo
        version: blue
    spec:
      containers:
      - name: web
        image: nginxdemos/hello:plain-text
        ports:
        - containerPort: 80
