morevolumes.yaml
apiVersion: v1
kind: Pod
metadata: 
  name: morevol
spec:
  containers:
  - name: busy1
    image: busybox
    command:
      - sleep
      - "3600" 
    volumeMounts:
      - mountPath: /busy1
        name: test
  - name: busy2
    image: busybox
    command:
      - sleep
      - "3600"
    volumeMounts:
      - mountPath: /busy2
        name: test
  volumes: 
    - name: test
      emptyDir: {}
