bluegreen-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bluegreen
spec:
  selector:
    app: bluegreen-demo
    version: blue
  ports:
  - port: 80
    targetPort: 80
